message BundleDatatable
{
	repeated AssetData assets = 1;
	repeated BundleData bundles = 2;
}
message AssetData
{
	required string assetPath = 1;
	required string bundleName = 2;
	required BundleType bundleType = 3;
	repeated string normalDependencies = 4;
	repeated string baseDependencies = 5;
}
message BundleData
{
	required string bundleName = 1;
	required string md5 = 2;
	required BundleType bundleType = 5;
	required int32 bundlesize = 6;
}

enum BundleType
{
    SCENE = 1;
    EFFECT= 2;
    MODEL = 3;
    UI    = 4;
    SOUND = 5;
    BYTES = 6;
    COMMON = 7;
    LUA = 8;
}