message ConfigDatatable
{
	optional string tname = 1;
	repeated ConfigData tlist = 2;
}

message ConfigData
{
	required int32 ID = 1;
	optional string Key = 2;
	optional string Desc = 3;
	optional int32 Type = 4;
	optional int32 Int = 5;
	repeated int32 IntArr = 6;
	optional float Float = 7;
	repeated float FloatArr = 8;
}